--- a/Client/package.json
+++ b/Client/package.json
@@ -3,20 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.16.2",
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
+    "react-redux-form": "^1.13.0",
     "react-router": "^4.1.1",
     "react-router-bootstrap": "^0.24.2",
     "react-router-dom": "^4.1.1",
     "react-scripts": "1.0.10",
-    "redux": "^3.7.1"
+    "redux": "^3.7.1",
+    "redux-form": "^7.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "css": "node-sass src/Styles/ -o public/css/ --output-style"
+  },
+  "devDependencies": {
+    "babel-eslint": "^7.2.3",
+    "node-sass": "^4.5.3",
+    "nodemon": "^1.11.0"
   }
 }
