--- a/Server/package.json
+++ b/Server/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Kosi2Mazaki/RspectiveTask#readme",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "cors": "^2.8.4",
     "express": "^4.15.3",
     "jsonwebtoken": "^7.4.1",
     "mongodb": "^2.2.30",
